--- a/Opdrachten/02 - Formulieren/search.html
+++ b/Opdrachten/02 - Formulieren/search.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>search form</title>
+    <link rel="stylesheet" href="assets/css/style.css">
     <script defer type="text/javascript" src="assets/js/app.js"></script>
 </head>
 <body>
     <form class="forms" action="search.php">
         <label class="forms__label" for="name">label</label><br>
-        <input class="forms__input" type="text" id="name" name="search" value="something"><br>
+        <input class="forms__input" type="text" id="name" name="search" place="something"><br>
         <input class="forms__submit" type="submit">
     </form>
 </body>
