--- a/Project/public/search.html
+++ b/Project/public/search.html
@@ -8,10 +8,10 @@
     <script defer type="text/javascript" src="assets/js/app.js"></script>
 </head>
 <body>
-    <form class="forms" action="search.php">
-        <label class="forms__label" for="name">label</label><br>
-        <input class="forms__input" type="text" id="name" name="search" place="something"><br>
-        <input class="forms__submit" type="submit">
+    <form class="search" action="search.php">
+        <label class="search__label" for="name">label</label><br>
+        <input class="search__input" type="text" id="name" name="search" place="something"><br>
+        <input class="search__submit" type="submit">
     </form>
 </body>
 </html>
