--- a/Project/public/search.html
+++ b/Project/public/search.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <form class="search" action="search.php">
-        <label class="search__label" for="name">label</label><br>
+        <label class="search__label" for="name">kies uit amsterdam, den bosch, den haag, almere, haarlem</label><br>
         <input class="search__input" type="text" id="name" name="search" place="something"><br>
         <input class="search__submit" type="submit">
     </form>
