--- a/Project/public/searchNaw.html
+++ b/Project/public/searchNaw.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>search naw</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script defer src="assets/js/appFetch.js"></script>
 </head>
 <body>
     <form id="searchForm" class="searchNaw" action="searchNaw.php" method="GET">
         <label class="searchNaw__label" for="searchPersoon"></label>
-        <input class="searchNaw__input" type="text" name="searchPersoon">
+        <input id="js--input" class="searchNaw__input" type="text" name="searchPersoon">
         <input class="searchNaw__submit" type="submit">
     </form>
 </body>
