--- a/Project/public/searchNaw.html
+++ b/Project/public/searchNaw.html
@@ -13,5 +13,13 @@
         <input id="js--input" class="searchNaw__input" type="text" name="searchPersoon">
         <input class="searchNaw__submit" type="submit">
     </form>
+    <section class="nawSection">
+        <p id="nawItem__id"></p>
+        <p id="nawItem__name"></p>
+        <p id="nawItem__street"></p>
+        <p id="nawItem__huisnr"></p>
+        <p id="nawItem__postcode"></p>
+        <p id="nawItem__email"></p>
+    </section>
 </body>
 </html>
