--- a/Project/public/naw.html
+++ b/Project/public/naw.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>naw form</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/app.js"></script>
+    <script defer type="text/javascript" src="assets/js/appNaw.js"></script>
 </head>
 <body>
-    <form class="nawform" action="nawSave.php" method="POST">
-        <label for="name" class="nawform__label">naam
-        <input class="nawform__label--input" type="text" value="name" id="name" name="name"></label>
+    <form id="nawForm" class="nawForm" action="nawSave.php" method="POST">
+        <label for="name" class="nawForm__label">naam
+        <input class="nawForm__label--input" type="text" placeholder="name" id="name" name="name"></label>
 
-        <label for="street" class="nawform__label">straat
-        <input class="nawform__label--input" type="text" value="street" id="street" name="street"></label>
+        <label for="street" class="nawForm__label">straat
+        <input class="nawForm__label--input" type="text" placeholder="street" id="street" name="street"></label>
 
-        <label for="huisnr" class="nawform__label">huisnummer
-        <input class="nawform__label--input" type="text" value="huisnr" id="huisnr" name="huisnr"></label>
+        <label for="huisnr" class="nawForm__label">huisnummer
+        <input class="nawForm__label--input" type="text" placeholder="huisnr" id="huisnr" name="huisnr"></label>
 
-        <label for="postcode" class="nawform__label">postcode
-        <input class="nawform__label--input" type="text" value="postcode" id="postcode" name="postcode"></label>
+        <label for="postcode" class="nawForm__label">postcode
+        <input class="nawForm__label--input" type="text" placeholder="postcode" id="postcode" name="postcode"></label>
         
-        <label for="email" class="nawform__label">email
-        <input class="nawform__label--input" type="text" value="email" id="email" name="email"></label>
+        <label for="email" class="nawForm__label">email
+        <input class="nawForm__label--input" type="text" placeholder="email" id="email" name="email"></label>
 
-        <input type="submit" class="nawform__submit">
+        <input type="submit" class="nawForm__submit">
     </form>
 </body>
 </html>
