--- a/Project/public/searchNaw.html
+++ b/Project/public/searchNaw.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>search naw</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <script defer src="assets/js/appFetch.js"></script>
+    <script defer src="assets/js/appSearch.js"></script>
 </head>
 <body>
     <form id="searchForm" class="searchNaw" action="searchNaw.php" method="GET">
