--- a/Project/public/naw.html
+++ b/Project/public/naw.html
@@ -22,7 +22,7 @@
         <input class="nawForm__label--input" type="text" placeholder="postcode" id="postcode" name="postcode"></label>
         
         <label for="email" class="nawForm__label">email
-        <input class="nawForm__label--input" type="text" placeholder="email" id="email" name="email"></label>
+        <input id="email" class="nawForm__label--input" type="text" placeholder="email" id="email" name="email"></label>
 
         <input type="submit" class="nawForm__submit">
     </form>
