--- a/Project/public/imageupload.html
+++ b/Project/public/imageupload.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>image upload</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script defer src="assets/js/appImg.js"></script>
 </head>
 <body>
     <form id="imageForm" class="imageForm" enctype="multipart/form-data" action="imagerecieve.php" method="POST">
