--- a/Project/public/imageupload.html
+++ b/Project/public/imageupload.html
@@ -12,6 +12,7 @@
         <input class="imageForm__hidden" type="hidden" name="MAX_FILE_SIZE" value="30000000">
         <input class="imageForm__file" type="file" accept=".png" id="image" name="image" value=""><br>
         <input class="imageForm__submit" type="submit" value="upload">
+        <a id="link" href=""></a>
     </form>
 </body>
 </html>
