--- a/Project/public/webcamupload.html
+++ b/Project/public/webcamupload.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webcam upload</title>
-    <script defer src="assets/js/appWebcam.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script defer type="module" src="assets/js/appWebcam.js"></script>
 </head>
 <body>
     <form id="imageForm">
